# azpazeta

./: .bzrignore  .gitignore  .travis.yml  Azpazeta.spec  CMakeLists.txt  Doxyfile  License  MSVC.patch  PKGBUILD  README.md  Readme  Win32.patch  azpazeta.spec  testing.azp
cmake/: FindLibSndFile.cmake  FindLua52.cmake  FindOgg.cmake  FindOpenGLES2.cmake  FindVorbis.cmake  FindVorbisFile.cmake
debian/: azpazeta.desktop  azpazeta.postinst.debhelper  azpazeta.postrm.debhelper  azpazeta.substvars  changelog  control  copyright  files  postinst  rules  x-azpazeta-script.xml  x-azpazeta.xml
debian/azpazeta/DEBIAN/: control  md5sums  postinst
doc/html/: annotated.html  classes.html  dir_0c3e97282ce07ad9f4c6950db23c7a17.html  dir_231d42f44e9f8f21a334b1471808f62a.html  dir_25685f9c6d837c57f295dee081495707.html  dir_3ebd6a97f4d46c099a7fad098c45bee7.html  dir_4975cd14900c86aa09c443e4ac2bd69d.html  dir_5c366fdc541eb198ca56104dd1779896.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6e08f71a1e16e0f0aa93667ff00883a7.html  dir_803ee67260c130b45d29089798491ab2.html  dir_8a81378dc8ad86878450ac6f7f0b0ad1.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_c43b215a2ade73e6562bd37d8a11c12a.html  dir_c7f79d9fead0a70cab4af348b59fbdf1.html  dir_e5a29e2a9c04a6d914317e133719110d.html  dir_ec8b1c4f80253a6d0c16ba9aa943fdbb.html  dir_fc4c7f03e1a69a98c370fae55a743828.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  modules.html  pages.html
doc/html/d0/d0e/: structTiXmlCursor-members.html
doc/html/d0/d3b/: startgui_8hpp.html  startgui_8hpp_source.html
doc/html/d0/d40/: classOptions-members.html
doc/html/d0/d6d/: classTiXmlAttributeSet-members.html
doc/html/d0/d8f/: classAZPLogWindow-members.html
doc/html/d0/dbe/: classAzpMap-members.html
doc/html/d0/dcb/: structAzpMapData-members.html
doc/html/d0/df5/: tinystr_8h_source.html
doc/html/d1/d15/: classTiXmlString.html
doc/html/d1/d4a/: classMyApp.html
doc/html/d1/d65/: group__PathFinder.html
doc/html/d1/dab/: classAzpAPI-members.html
doc/html/d1/dae/: classTiXmlDocument-members.html
doc/html/d1/dd4/: sprite_8hpp_source.html
doc/html/d1/dfb/: classAZPVM-members.html
doc/html/d2/d2f/: classAZPAlert.html
doc/html/d2/d46/: classTelemetry-members.html
doc/html/d2/d76/: classBasicGLPane.html
doc/html/d2/d8f/: loader_8hpp_source.html
doc/html/d2/dd9/: classEventManager.html  classTiXmlString-members.html
doc/html/d2/de6/: classHTMLVersion-members.html
doc/html/d2/df2/: classTiXmlDeclaration.html
doc/html/d3/d2d/: server__command_8hpp_source.html
doc/html/d3/d36/: structAzpMetaData.html
doc/html/d3/d50/: classAzpAPI.html
doc/html/d3/d75/: classAZPVM.html
doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  classes_61.js  classes_62.js  classes_64.js  classes_65.js  classes_69.js  classes_6c.js  classes_6f.js  classes_73.js  classes_74.js  classes_77.js  enums_61.js  enums_6e.js  enumvalues_61.js  files_61.js  files_63.js  files_67.js  files_6f.js  files_70.js  files_73.js  functions_61.js  functions_63.js  functions_64.js  functions_66.js  (+14 more)
lang/es/: azpazeta.mo
lang/fr/: azpazeta.mo
maps/: data.xml
maps/core/: INTRODUCTION  OnCorner.azps  OnExecutedExtern.azps  database.xml  info.xml  main.tmx  mount.xml  rocky-event.xml  rocky.tmx  start.xml  station-duo-event.xml  station-event.xml  station.tmx
maps/orwell/: info.xml  mount.xml  station-event.xml  station.tmx
maps/the_sect/: CheckBridge.azps  OnAcceptSteal.azps  OnEnterHouse.azps  OnEnterMasonicCenter.azps  OnEnterPalace.azps  OnEnterPhilosophicCenter.azps  OnGetMisil.azps  OnInit.azps  OnMilitarSee.azps  OnPurpleGirl.azps  OnTalk.azps  TalkWithCure.azps  database.xml  info.xml  magnox-event.xml  main-event.xml  militar-event.xml
maps/the_sect (unfinished)/: INTRODUCTION  info.xml  main.tmx
maps/the_sect-es/: CheckBridge.azps  OnAcceptSteal.azps  OnEnterHouse.azps  OnEnterPalace.azps  OnEnterPhilosophicCenter.azps  OnFinishChest.azps  OnGetMisil.azps  OnInit.azps  OnMilitarSee.azps  OnMoneyTutorial.azps  database.xml  info.xml  magnox-event.xml  magnox.tmx  main.tmx  militar.tmx
maps/tutorial/: OnChestTutorial.azps  OnPurpleGirl.azps  OnStation.azps  OnTalk.azps  database.xml  main-event.xml  main.tmx
maps/tutorial-es/: OnChestTutorial.azps  OnFinishChest.azps  OnPurpleGirl.azps  OnTalk.azps  database.xml  info.xml  main-event.xml
media/: blank.png0  blank.png1  blank.png2  blank.png3  options.xcf
options/: options.xml
scripts/: Init.azps
shaders/: fragment.fs  vertex.vs
src/: CMakeLists.txt  app.cpp  app.hpp  log.cpp  log.hpp  start.cpp  start.hpp  url.hpp  version.cpp  version.hpp  welcome.cpp
src/azpmarket/: azpmarket.cpp  azpmarket.hpp
src/azpscript/: azpapi.cpp  azpapi.hpp  azpapilua.hpp  azpvm.cpp  azpvm.hpp  event.cpp  event.hpp
src/config/: config.h  config.h.in
src/core/: core.cpp  core.hpp  server.cpp  server.hpp  server_command.hpp  server_commands.cpp  test.sh  test_client  test_client.cpp
src/database/: database.cpp  database.hpp
src/display/opengl/: gl.cpp  gl.hpp  shader.cpp  shader.cpp.orig  shader.hpp  test.cpp  test.hpp
src/maploader/: azpmap.cpp  azpmap.hpp  map.cpp  map.hpp
src/network/: telemetry.cpp  telemetry.hpp
src/pathfinder/: pathfinder.cpp  pathfinder.hpp
src/physics/: battle.cpp  battle.hpp
src/savefile/: savefile.cpp  savefile.hpp
src/sound/: sound.c  sound.cpp  sound.hpp
src/sprite/: sprite.cpp  sprite.hpp
src/start/: startgui.cpp  startgui.hpp
src/window/: alert.cpp  alert.hpp  console.cpp  console.hpp  loader.cpp  loader.hpp  longtalk.cpp  longtalk.hpp  newgame.cpp  newgame.hpp  options.cpp  options.hpp  startmission.cpp  startmission.hpp  testgl.cpp  testgl.hpp
translate/: azpazeta.pot  en-US.pot  es-ES.mo  es-ES.po  fr-FR.mo  fr-FR.po  getPot.sh
(+121 files in other folders)
